--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   </style>
 </head>
 <body>
-  <h1>KAMU REPO</h1>
-  <p>Tweak dan utilitas jailbreak buatan sendiri</p>
-  <a class="button" href="sileo://source/https://repo.kamu.com/">Add to Sileo</a>
+  <h1>RITUAL</h1>
+  <p>The World is a Mess/p>
+  <a class="button" href="https://instagram.com/ritualby/">Follow Me</a>
 </body>
 </html>
