Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <h1>RITUAL</h1>
-  <p>The World is a Mess/p>
+  <p>The World is a Mess</p>
   <a class="button" href="https://instagram.com/ritualby/">Follow Me</a>
 </body>
 </html>
